crates/aven-parser/tests/fixtures/parser/invalid/legacy-record-separators.av
value = { name = "Ada", age := 36 }
